# pkos

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
source/: CMakeLists.txt
source/boot/: bootloader.s
source/bootloader/: CMakeLists.txt  Makefile  boot_error.s  bootloader.ld  bootloader.mk  bootloader.s  bootloader32.s  bootloader64.s  gdt.c  gdt32.c  gdt64.c  page_tables.c  paging.c
source/bootloader/console/: console.s  print_hex.s  print_newline.s  print_string.s
source/bootloader/include/: gdt16.h  gdt64.h  memory_map.h  page_tables.h  version.h
source/bootloader/include/boot/: config.h  disc.h  enter_kernel.h  graphics_mode.h  kernel.h  sequence.h
source/bootloader/include/commands/: af.h  boot.h  calc.h  cat.h  clear.h  color.h  cp.h  disc.h  echo.h  ed.h  exit.h  fibonacci.h  gtn.h  help.h  ls.h  lsmem.h  reset.h  rm.h  stat.h  touch.h  tree.h  version.h  wmem.h
source/bootloader/include/console/: backspace.h  char.h  clear.h  color.h  color_lut.h  console.h  frame_buffer.h  init.h  inline_put.h  newline.h  print.h  print_bool.h  print_dec.h  print_hex.h  print_sdec.h  print_shex.h  printn.h  put.h  set_color.h  update.h
source/bootloader/include/disc/: detect.h  filesystem.h  read.h  reset.h  select.h  wait_ready.h  write.h
source/bootloader/include/heap/: alloc.h  free.h  heap.h  init.h
source/bootloader/include/interrupt/: fatal_handler.h  fatal_handler_entry.h  idt.h  init.h  (+5 more)
source/bootloader/src/: bios_idt_ptr.c  boot_error.s  bootloader_entry.s  gdt16.c  gdt64.c  memory_map.c  page_tables.c
source/bootloader32/: bootloader32.ld  bootloader32.mk  bootloader32.s  gdt32.c
source/bootloader64/: bootloader64.ld  bootloader64.mk  bootloader64.s  gdt64.c  tss64.c
source/bootsector/: Makefile  bootsector.ld  bootsector.mk  bootsector.s  gdt32.c  memory_map.c
source/bootsector/src/: bootsector.s  gdt32.c  memory_map.c
source/kernel/: CMakeLists.txt  Makefile  kernel.ld  kernel.mk
source/kernel/drivers/: Makefile  driver.ld
source/kernel/include/: bios_console.h  entry.h  entry_error.h  heap.h  idt.h  llist.h  memory.h  stack.h  string.h
source/kernel/modules/: Makefile  module.ld
source/kernel/src/: bios_console.c  entry.c  entry.cpp  entry_error.c  heap.c  idt.c  main.c
source/linker/: bootloader.ld  global.ld  memory.ld
source/pklib/: CMakeLists.txt
source/pklib/include/: heap.h  init.h  pkldef.h
source/pklib/src/: heap.s  init.c
source/system/: CMakeLists.txt
source/system/include/: defs.h
(+511 files in other folders)
